<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_e6e4e4">




        <RelativeLayout
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_f8f6f7">

            <LinearLayout
                android:id="@+id/linear_welcome"
                android:layout_width="wrap_content"
                android:layout_height="230dp"
                android:background="@drawable/welcome_bg"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/welcome"
                    android:layout_marginTop="@dimen/marginTop_60"
                    android:layout_marginRight="@dimen/marginTop_60"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_90"
                    android:background="@drawable/welcome"
                    />
                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Fatema Elbamby"
                    android:fontFamily="casual"
                    android:textColor="@color/color_white"
                    android:textSize="17sp"
                    android:textStyle="bold|italic" />


            </LinearLayout>

            <TextView
                android:id="@+id/browse_category"
                android:layout_below="@id/linear_welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Browse Category"
                android:textAlignment="center"
                android:layout_margin="@dimen/margin_5"
                android:textColor="@color/color_9a7c84"
                android:textSize="17sp"
                android:textStyle="bold" />


            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPagerSlider"
                android:layout_below="@id/browse_category"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="60dp"
                android:paddingEnd="60dp"
                android:layout_marginTop="@dimen/margin_10">


            </androidx.viewpager2.widget.ViewPager2>

        </RelativeLayout>


        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/linear_tablayout"
            android:layout_below="@id/slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_e6e4e4"
            android:padding="@dimen/padding_10">


            <androidx.cardview.widget.CardView
                xmlns:cardview="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_15"
                android:layout_marginLeft="@dimen/margin_15"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_10"
                android:paddingStart="@dimen/paddingStart_4"
                android:clickable="true"
                cardview:cardCornerRadius="@dimen/cardCornerRadius_4"
                android:foreground="?android:attr/selectableItemBackground"
                cardview:cardElevation="@dimen/elevation_5"
                android:paddingLeft="@dimen/paddingLeft_2"
                android:background="@color/color_9a7c84">

            <com.google.android.material.tabs.TabLayout
                android:layout_below="@id/slider"
                android:id="@+id/tablayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_f8f6f7"
                android:padding="@dimen/padding_5"
                app:tabIndicatorColor="@color/colorPrimary"
                app:tabRippleColor="@color/colorPrimary"
                app:tabTextColor="@color/colorAccent">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/ItemTab"
                    android:layout_width="@dimen/width_25"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Product"/>


                <com.google.android.material.tabs.TabItem
                    android:id="@+id/shopTab"
                    android:layout_width="@dimen/width_25"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/shop" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/reviewTab"
                    android:layout_width="@dimen/width_25"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Reviews" />

            </com.google.android.material.tabs.TabLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <androidx.viewpager.widget.ViewPager
            android:layout_below="@id/linear_tablayout"
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="400dp"/>



        <TextView
            android:id="@+id/tv_similarItem"
            android:layout_below="@id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/similar_to_items_you_viewed"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:paddingLeft="@dimen/padding_5"
            android:paddingTop="@dimen/padding_10"
            android:layout_marginTop="@dimen/margin_15"
            android:layout_marginLeft="@dimen/margin_5"
            />


        <androidx.recyclerview.widget.RecyclerView
            android:layout_below="@+id/tv_similarItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/similarItem_recyclerView"
            android:paddingLeft="@dimen/padding_15"
            android:paddingTop="@dimen/padding_15"
            >

        </androidx.recyclerview.widget.RecyclerView>
        <TextView
            android:id="@+id/tv_viewmore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/similarItem_recyclerView"
            android:text="@string/view_more"
            android:textSize="@dimen/textSize_15"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            />
        <View
            android:id="@+id/line"
            android:layout_below="@id/tv_viewmore"
            android:layout_width="@dimen/width_70"
            android:layout_height="@dimen/height_1"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="@dimen/margin_14"
            android:background="@color/colorPrimary" />







        <TextView
            android:id="@+id/tv_recently_view"
            android:layout_below="@id/tv_viewmore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recently_viewed"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:paddingStart="@dimen/padding_5"
            android:paddingTop="@dimen/padding_5"
            android:layout_marginTop="@dimen/padding_5"
            android:layout_marginLeft="@dimen/padding_5"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:layout_below="@+id/tv_recently_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recently_view_recyclerView"
            android:paddingLeft="@dimen/padding_10"
            android:paddingTop="@dimen/padding_15"

            >

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/tv_recently_fav"
            android:layout_below="@id/recently_view_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/similar_to_recent_favorites"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:paddingLeft="@dimen/padding_5"
            android:paddingTop="@dimen/padding_5"
            android:layout_marginTop="@dimen/margin_15"
            android:layout_marginLeft="@dimen/margin_5"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recently_fav_recyclerView"
            android:layout_below="@+id/tv_recently_fav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_10"
            android:paddingTop="@dimen/padding_15"

            >
        </androidx.recyclerview.widget.RecyclerView>





    </RelativeLayout>

</androidx.core.widget.NestedScrollView>